--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/adonalsium/nest-storage#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "truffle-artifactor": "^3.0.7",
